--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "developer-test",
   "version": "0.1.0",
+  "": "",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -8,7 +9,7 @@
     "@testing-library/user-event": "^13.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
